<resources>
    <string name="app_name">HDU Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // constant
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="log_in_fail">Log In failure!</string>
    <string name="type_your_message">Soạn tin nhắn mới…</string>
    <string name="acronym_of_point">P</string>
    <string name="str_cumulative_point">Cumulative Points</string>
    <string name="str_scan_qr_code">Scan QR Code</string>
    <string name="str_shake_to_find_friends">Shake to find friends</string>
    <string name="str_find_nearby_friends">Find nearby friends</string>
    <string name="str_add_new_friends">add new friends</string>
    <string name="str_title_friend_request_by_id">Allow others to add me by ID</string>
    <string name="str_description_friend_request_by_id">Enable this setting to allow others to add you as a friend by searching for your ID.</string>
    <string name="str_title_qr_code">QR code</string>
    <string name="str_title_birthday">Birthday</string>
    <string name="str_not_set">Not set</string>
    <string name="str_title_status_message">Status message</string>
    <string name="str_title_display_name">Display name</string>
    <!-- spot: share profile on timeline -->
    <string name="str_title_spot">Share profile media updates</string>
    <string name="str_description_spot">Share profile updates on Timeline.</string>
    <string name="str_back">Back</string>
    <string name="str_home">Home</string>
    <string name="str_email">Email</string>
    <string name="str_get_started_chatting">Get started chatting!</string>
    <string name="str_tap_icon_to_get_started">Ready to chat? \nTap the icon in the top right to get started.</string>
    <string name="str_new_chat">New chat</string>
    <string name="str_password">Password</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_email_test">empty@2jp.com</string>
    <string name="str_forget_your_password">Forget your password?</string>
    <string name="str_no_registered_email">No registered email</string>
    <string name="str_log_in_with_facebook">Log in with Facebook</string>
    <string name="str_try_out_timeline_today">Try out Timeline today!</string>
    <string name="str_get_started_posting">Get started posting!</string>
    <string name="str_try_out_timeline">Tell your friends what you\'re up to and see what they have to share too!</string>
    <string name="str_user_avatar">User Avatar</string>
    <string name="str_default">Default</string>
    <string name="str_edit_user_information">Edit user information</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_keep">Keep</string>
    <string name="str_chat">Chat</string>
    <string name="str_goto_chat_box">Goto chat box</string>
    <string name="str_free_call">Free Call</string>
    <string name="str_call">Call</string>
    <string name="str_video_call">Video Call</string>
    <string name="msg_log_in_wait">Please! wait for minutes…</string>
    <string name="str_friends">Friends</string>
    <string name="str_choose_friends">Choose friends</string>
    <string name="str_chat_with_value">Chat(%d)</string>
    <string name="str_num_of_friend">Friend %d</string>
    <string name="str_search_by_name">Search by name</string>
    <string name="str_remove_text">Remove text</string>

</resources>
