<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.hdu.go2jp.hduchat.activity.LoginActivity">

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="@dimen/size_350dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:hint="@string/str_email_address"
        android:inputType="textEmailAddress"
        android:text="@string/str_email_test"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="@dimen/size_350dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_below="@+id/edEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:text="@string/str_email_test"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/size_350dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_above="@+id/btnConnectWithFacebook"
        android:layout_centerHorizontal="true"
        android:background="@color/river_bed"
        android:text="@string/ok"
        android:textAllCaps="true" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/btnSignInWithFacebook"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/silver_chalice" />

    <TextView
        android:id="@+id/btnConnectWithFacebook"
        android:layout_width="@dimen/size_350dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/str_log_in_with_facebook"
        android:textColor="@color/river_bed"
        android:textSize="@dimen/text_size_20dp"
        tools:ignore="SpUsage" />

</RelativeLayout>