<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/size_300dp"
    android:layout_height="@dimen/size_400dp"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="@dimen/size_96dp"
        android:layout_height="@dimen/size_96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_50dp"
        app:cardCornerRadius="@dimen/radius_50dp">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/str_user_avatar"
            android:scaleType="fitXY"
            android:src="@drawable/img_user_avatar_default_3" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_card"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_10dp"
        android:layout_marginTop="@dimen/spacing_10dp"
        android:gravity="center_horizontal"
        android:text="@string/str_default"
        android:textColor="@color/trout"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_centerHorizontal="true"
        android:drawablePadding="@dimen/spacing_2dp"
        android:drawableStart="@drawable/profile_popup_id"
        android:gravity="center_horizontal"
        android:text="@string/str_default"
        android:textColor="@color/gray_chateau"
        android:textSize="@dimen/text_size_12sp" />

    <LinearLayout
        android:id="@+id/llFollowFriend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25dp"
        android:layout_below="@id/tvId"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/btnStarFriend"
            android:layout_width="@dimen/size_25dp"
            android:layout_height="@dimen/size_25dp"
            android:layout_marginEnd="@dimen/spacing_8dp"
            android:background="@color/gray_athens"
            android:clickable="true"
            android:padding="@dimen/spacing_3dp"
            android:src="@drawable/ic_like_user_dialog"
            tools:ignore="KeyboardInaccessibleWidget" />

        <ImageView
            android:id="@+id/btn_home_friend"
            android:layout_width="@dimen/size_25dp"
            android:layout_height="@dimen/size_25dp"
            android:background="@color/gray_athens"
            android:clickable="true"
            android:padding="@dimen/spacing_3dp"
            android:src="@drawable/ic_home_user_dialog"
            tools:ignore="KeyboardInaccessibleWidget" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_above="@id/btn_group"
        android:layout_marginBottom="@dimen/spacing_4dp"
        android:layout_marginTop="@dimen/spacing_96dp"
        android:background="@color/gallery" />

    <LinearLayout
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_80dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnEdit"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16dp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_35dp"
                android:contentDescription="@string/str_edit_user_information"
                android:padding="@dimen/spacing_2dp"
                android:src="@drawable/ic_edit_profile_user_dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_edit_profile"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnHome"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16dp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:padding="2dp"
                android:src="@drawable/ic_home_user_dialog_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_home"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnKeep"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16dp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_35dp"
                android:padding="@dimen/spacing_2dp"
                android:src="@drawable/profile_popup_ic_keep" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_keep"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnChat"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_35dp"
                android:contentDescription="@string/str_goto_chat_box"
                android:padding="@dimen/spacing_2dp"
                android:src="@drawable/ic_chat_user_dialog_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_chat"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCall"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16dp"
            android:visibility="gone"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_35dp"
                android:contentDescription="@string/str_call"
                android:padding="@dimen/spacing_2dp"
                android:src="@drawable/ic_call_user_dialog_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_free_call"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnVideo"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_16dp"
            android:visibility="gone"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_35dp"
                android:padding="@dimen/spacing_2dp"
                android:src="@drawable/ic_video_call_user_dialog_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_video_call"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>