<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/img_empty_room_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4dp"
            android:text="@string/str_get_started_chatting"
            android:textSize="@dimen/text_size_20dp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:maxWidth="180dp"
            android:text="@string/str_tap_icon_to_get_started"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_14dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btnNewChat"
            android:layout_width="@dimen/size_180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:background="@color/green"
            android:text="@string/str_new_chat"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </LinearLayout>

</merge>