<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context="vn.hdu.go2jp.hduchat.activity.CreateRoomActivity">


    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:background="@color/river_bed">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/size_60dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

        <TextView
            android:id="@+id/tvReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/btnBack"
            android:padding="4dp"
            android:text="@string/str_choose_friends"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlToolBar"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_16dp">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="@dimen/size_16dp"
            android:layout_height="@dimen/size_16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_search_ghost"
            tools:ignore="ContentDescription" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivSearchIcon"
            android:hint="@string/str_search_by_name"
            android:textColorHint="@color/ghost"
            android:textSize="@dimen/text_size_16dp"
            app:backgroundTint="@color/gray_athens"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/ivRemoveText"
            android:layout_width="@dimen/size_28dp"
            android:layout_height="@dimen/size_28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_img_remove_search_text"
            android:contentDescription="@string/str_remove_text"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvFoundFriendNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSearch"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:text="@string/str_friends"
        android:textColor="@color/waterloo"
        android:textSize="@dimen/text_size_14dp"
        tools:ignore="SpUsage" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvNewChatContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCreateRoom"
        android:layout_below="@+id/tvFoundFriendNumber"
        tools:listitem="@android:layout/simple_list_item_multiple_choice" />

    <HorizontalScrollView
        android:id="@+id/hsvFriendsThumb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_96dp"
        android:layout_above="@+id/btnCreateRoom"
        android:background="@color/alabaster"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/llFriendsThumb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <Button
        android:id="@+id/btnCreateRoom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/malachite"
        android:text="@string/str_chat"
        android:textAllCaps="false"
        android:textColor="@color/green_pastel"
        android:textSize="@dimen/text_size_16sp" />

</RelativeLayout>
